@startuml

note "All private fields are implied to have getter and setter methods, as appropriate." as N1

abstract class MessageHandler {
    +received(Message message)
    +send(Message message, Inetaddress address, int port)
}

class GUIMessageHandler {
    -{static} instance: GUIMessageHandler
    -context: UserInterface

    +{static} getInstance(): GUIMessageHandler
    +received(Message message)
}

class Main {
    -floorNumber: int
    -numberOfElevators: int
    -elevators: ArrayList<GUIElevator>
    -floorClicks: CustomButton[][]

    +start(): void
    +moveElevator(int elevatorID, int newFloor): void
    +moveElevator(GUIElevatorMoveMessage msg): void
    +removeNodeByCoordinates(int row, int col, GridPane pane): void
    +pressFloorButton(GUIFloorMessage msg):void
    +pressElevatorButton(int floor): void 
    +openDoor(int ID): void
    +closeDoor(int ID): void
    +stickElevator(int ID): void
    +unstickElevator(int ID): void
    +createNewScene(int elevatorID): void
    +printToLog(String message): void
}

class ErrorButtons {
    -elevatorID: int
    -type: String

    -sendDoorStick(int elevatorID, int time)
    -sendElevatorStick(int elevatorID, int time)
}

class CustomButton {
    -floorNumber: int
    -dir: Direction

    + {static} create(int floorNumber, Direction dir): CustomButton
    - sendFloorClick(int floorNumber, Direction direction): void
    + clickButton(): void
    + unClickButton(): void
}

class ElevatorButton {
    -floorNum: int
    -elevatorID: int
    -parentStage: Stage

    -sendElevatorClick(int elevatorID, int floorNum)
}

class GUIElevator {
    -elevatorID: int
    -currentFloor: int
}
GUIElevator -up-|> JavaFX.Rectangle

interface UserInterface {
    +moveElevator(GUIElevatorMoveMessage msg)
    +pressFloorButton(GUIFloorMessage msg)
}

MessageHandler <|.. GUIMessageHandler

Main ..|> UserInterface
Main "1" *-- "numberOfElevators" ErrorButtons
Main "1" *-- "floorNumber" CustomButton
Main --> GUIMessageHandler

@enduml